--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+
+.nav{
+    display: flex;
+    justify-content: space-between;
+}
+.btto {
+    color: white;
+    font-size: large;
+    font-weight: 700;
+    height: 40px;
+    width: auto;
+    background-color: #66c498;
+    border: rgb(165, 209, 165);
+    padding: 10px 20px;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin: 10px 10px;
+}
+.btto:hover {
+    background-color: #1b6542;
+}
 #banner {
     background-color: #C6E4D6; 
     display: flex;
@@ -34,6 +57,7 @@
     border: none;
     padding: 10px 20px;
     font-size: 1rem;
+    margin: 5px 5px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -218,10 +242,74 @@
   .btnyellow:hover {
     background-color: #f5b300;
   }
+   /* CHIEF */
+#chief {
+    border: 2x solid gray;
+    background-color: #f4f4f4; 
+          border: #1b6542;
+          
+       height: 200px;
+       align-items: center;
+
+       }
+       .cheiff {
+        background-color:white; 
+        box-sizing: border-box;
+        border: 1px solid rgba(14, 14, 14, 0.15);
+        border-radius: 16px;
+        margin: 0px 0px 0px 150px;
+        width: 80%;
+        background: rgb(255, 255, 255);
+        border-radius: 20px;
+        cursor: pointer;
+        
+        transition:  0.3s ease;
+       } 
+       .cheiff:hover {
+ background-color: #fff;
+       }
+          
+       .quote {
+           position: absolute;
+           margin: 0px 0px 0px 130px;
+       }
+       /* opinion styling  */
+    #opinion {
+        display: inline-block;
+    }
+       h1 {
+        text-align: center;
+       
+    }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+    }
+    th, td {
+        border: 1px solid #ccc;
+        padding: 10px;
+        text-align: center;
+    }
+    th {
+        background-color: #51a07b;
+        color: white;
+    }
+    button {
+        padding: 10px 20px;
+        background-color:  #51a07b;
+        color: white;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+    button:hover {
+        background-color: green;
+    }
   /* RECENT NEWS STYLING */
   #recent {
     padding: 40px;
-    background-color: #f4f4f4;
+    background-color: white;
   }
   
   .recnew h1 {
@@ -230,7 +318,7 @@
     color: #333;
     margin-bottom: 20px;
   }
-  
+ 
   .recnew p {
     text-align: center;
     font-size: 1.2rem;
@@ -244,17 +332,24 @@
     display: flex;
     /* justify-content: space-between; */
     /* justify-content:space-around; */
-    gap: 20px;
-    margin-bottom: 20px;
+
+    margin: 20px 10px 10px 10px;
+    background-color: #f4f4f4;
+    border-radius: 20px;
+    background-color: #f4f4f4; 
+    
   }
   
   .cartel {
     width: 60%;
+    margin: 8px;
   }
   
   .cartel h3 {
     font-size: 1.5rem;
     color: #333;
+    margin-top: 2px;
+    margin-bottom: 5px;
   }
   
   .cartel .dt {
@@ -288,19 +383,20 @@ position: relative;
 width: 400px;
 border-radius: 24px;
     height: auto;
-    margin-right: 20px;
+    /* margin-right: 20px; */
     
   }
   
   /* DONATE STYLING */
   #donate {
     padding: 40px;
-    background-color: #f4f4f4;    border-radius: 10%;
+    background-color: #f4f4f4;
   }
   .don {
     background-color: white;
     margin: 50px;
-    border-radius: 15px;
+    border-radius: 30px;
+
 
 
   }
@@ -330,11 +426,13 @@ border-radius: 24px;
     padding: 20px;
     border: 1px solid rgba(14, 14, 14, 0.15);
     text-align: center;
-    border-radius: 10px;
+    border-radius: 30px;
     width: 20%;
     justify-content: center;
 align-items: center;
+border-color:#999 ;
  gap: 20px;
+ margin: 0px 5px;
   }
   
   .dopt1 h2 {
@@ -347,17 +445,85 @@ align-items: center;
     background-color: #C6E4D6;  
        cursor: pointer;
   }
+  .forms {
+    justify-content: center;
+}
+.form {
+ 
+    border: 4px groove;
+    height: 50px;
+    width: 450px;
+    align-items: center;
+    border-radius: 16px;
+    margin-left:150px;
+}
+.btndon {
+display: flex;
+
+margin: 10px 0px 10px 350px;
+flex-direction: column;
+ padding: 10px 25px;
+ border-radius: 16px;
+ border-color: green;
+color: antiquewhite;
+font-weight: 600;
+border-radius: 8px;
+  height: 41px;
+ background:  rgb(9, 161, 92);
+     transition-duration: 0.4s;
+    }
+    .btndon:hover{
+        background-color: green;
+    } 
   /* SUBSCRIBE */
     #SUBSCRIBE {
-        position: static;
-        width: 1000px;
-        height: 300px;
-        
-        display: flex;
-        flex-direction: row;
+    background: rgb(198, 228, 214);
+    background-color: #C6E4D6; 
+   padding: 10px;
+    border-radius: 50px;
+    width: auto;
+    height: 300px;
+  }
+    .newsl {
+/* justify-content: center\; */
+margin: 10px 10px 10px 100px;
+padding: 70px 0;
+margin-left:150px;
+
+    }
+    .sub {
+        text-align: center;
+    font-size: 2.5rem;
+    margin-left:50px;
+    }
+    .sub > h1 {
+        text-align: center;
+        text-decoration: underline;
+    }
+    .para {
+        margin: 0;
+    }
+    .email {
         justify-content: center;
-        align-items: center;
-        
-        margin: 80px 0px;
-        border-radius: 24px;
-        background: rgb(198, 228, 214);}
+        border: 4px groove;
+        text-align: center;
+        height: 30px;
+        width: 450px;
+        background-color:rgb(249, 242, 233);
+    
+    }
+ #footer {
+      
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center;
+gap: 32;
+padding: 50px 160px 50px 160px;}
+.bdf {
+    font-size: medium;
+    border-bottom:dashed;
+}
+.icon img {
+margin:  0px 20px;
+}
